Use a different version of nexus dockerfile